<resources>
    <string name="app_name">CTC</string>

    <string name="startTime">Вылет: </string>
    <string name="endTime">Приземление: </string>
    <string name="flightTime">Рейс: </string>
    <string name="fromCity">Город вылета: </string>
    <string name="toCity">Город прилета: </string>
    <string name="flightInAir">Продолжительность полёта: </string>
    <string name="date">Дата: </string>
    <string name="gate">Выход: </string>
    <string name="notice">Notice</string>
    <string name="move">Move</string>
    <string name="event">Event</string>
</resources>
